Add Email Function

--- a/index.html
+++ b/index.html
@@ -13,4 +13,14 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init({
+        publicKey: "CWA1iWMiG_UoyQ1ha",
+      });
+   })();
+</script>
 </html>
