--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script type="text/javascript">
    (function(){
       emailjs.init({
-        publicKey: "CWA1iWMiG_UoyQ1ha",
+        publicKey: import.meta.env.VITE_apiKey,
       });
    })();
 </script>
